force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Approval_Comment__c</fullName>
    <description>This field will have approval comment</description>
    <label>Approval Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>