force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Business_Justification__c</fullName>
    <description>This field have valid business justification and it is applicable for Critical or Urgent requests.</description>
    <label>Business Justification</label>
    <type>TextArea</type>
</CustomField>