force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Cancellation_Reason__c</fullName>
    <description>This field will have cancellation reason for cancelled requests.</description>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>