force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Failure_Reason__c</fullName>
    <description>This field will hold failure reason of service request</description>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>