force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_New_Sandbox_Description__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_New_Sandbox_Description__c</fullName>
    <description>This field hold description of the requested sandbox.</description>
    <label>New Sandbox Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>