force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Org_Name__c</fullName>
    <description>This field will have Org names for which request is raised</description>
    <label>Org Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org1</fullName>
            </value>
            <value>
                <fullName>Org2</fullName>
            </value>
            <value>
                <fullName>Org3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>