force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Prod_Sandbox_Names__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Prod_Sandbox_Names__c</fullName>
    <label>Prod Sandbox Names</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NewSandboxes</valueSetName>
    </valueSet>
</CustomField>