force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Rejection_Reason__c</fullName>
    <description>This field will have rejection reason for rejected request.</description>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>