force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Request_Priority__c</fullName>
    <description>This field will have priority of service request</description>
    <label>Request Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>