force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Request_Status__c</fullName>
    <description>This field will have status of the service request</description>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed to process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>