force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Request_Type__c</fullName>
    <description>This field will have information of requested operation like Create, Refresh or delete sandbox</description>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New Sandbox</fullName>
            </value>
            <value>
                <fullName>Refresh Existing Sandbox</fullName>
            </value>
            <value>
                <fullName>Delete Existing Sandbox</fullName>
            </value>
            <value>
                <fullName>Create&quot;</fullName>
                <isActive>false</isActive>
                <label>Create&quot;</label>
            </value>
            <value>
                <fullName>Delete</fullName>
                <isActive>false</isActive>
                <label>Delete</label>
            </value>
            <value>
                <fullName>Refresh</fullName>
                <isActive>false</isActive>
                <label>Refresh</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>