force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Requestor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field will have requestor information</description>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests7</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>