force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Sandbox_Name__c</fullName>
    <description>This field will hold requested new Sandbox Name</description>
    <label>Sandbox Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>