force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Sandbox_Names__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Sandbox_Names__c</fullName>
    <label>Sandbox Names</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>