force-app/main/default/objects/Mcoe_Service_Requests__c/fields/Mcoe_Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Mcoe_Sandbox_Type__c</fullName>
    <description>This field will have requested sandbox type.</description>
    <label>Sandbox Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Developer Pro</fullName>
            </value>
            <value>
                <fullName>Partial Copy</fullName>
            </value>
            <value>
                <fullName>Full Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>