force-app/main/default/objects/Mcoe_Service_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mcoe_Org_Name__c</columns>
    <columns>Mcoe_Request_Priority__c</columns>
    <columns>Mcoe_Request_Type__c</columns>
    <columns>Mcoe_Request_Status__c</columns>
    <columns>Mcoe_Requestor__c</columns>
    <columns>Mcoe_Sandbox_Names__c</columns>
    <columns>Mcoe_Sandbox_Name__c</columns>
    <columns>Mcoe_Sandbox_Type__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Mcoe_Failure_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>