force-app/main/default/objects/Mcoe_Service_Requests__c/listViews/Mcoe_Service_Request_Approver_Mcoe_Service_Requests.listView-meta.xml
<ListView>
    <fullName>Mcoe_Service_Request_Approver_Mcoe_Service_Requests</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Request Approver</label>
    <queue>Mcoe_Service_Request_Approver</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>