force-app/main/default/objects/Mcoe_Service_Requests__c/listViews/Mcoe_Service_Request_Data.listView-meta.xml
<ListView>
    <fullName>Mcoe_Service_Request_Data</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Service Request Data</label>
</ListView>